// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consumer should have change in store state reflected 1`] = `
<div>
  <div
    id="value"
  >
    131
  </div>
</div>
`;

exports[`change getter 1`] = `
<div>
  <div
    id="selected"
  >
    {"dui":12}
  </div>
</div>
`;

exports[`change getter 2`] = `
<div>
  <div
    id="selected"
  >
    {"dui":12,"geo":"tie"}
  </div>
</div>
`;

exports[`use convenience method connect 1`] = `
<div>
  {"bom":509}
</div>
`;
